--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'await-status-action'
 description: 'description'
-author: 'Sibz@EntityZero'
+author: 's3krit'
 branding:
   icon: 'clock'  
   color: 'yellow'
